Fixed card spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -294,9 +294,13 @@ h5 {
   font-weight: 400;
 }
 
-.recipe-info,
 .recipe-name {
-  margin-top: 0;
+  margin: 10px 0;
+}
+
+.recipe-info {
+  margin: 0;
+  margin-bottom: 10px;
 }
 
 .recipe-container {
@@ -307,8 +311,7 @@ h5 {
 }
 
 .recipe-container .col-65 {
-  padding: 0 5px;
-  padding-top: 5px;
+  padding: 0 10px;
 }
 
 .recipe-container .col-35:hover,
